<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/register_expense_toolbar"
            style="@style/CustomToolbar" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp">

                <ImageView
                    style="@style/RegisterImageView"
                    android:src="@drawable/icon_edit"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:orientation="vertical"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp">

                    <TextView
                        android:id="@+id/register_expense_1_q"
                        style="@style/CustomTextView" />

                    <EditText
                        android:id="@+id/register_expense_place"
                        style="@style/CustomEditText"/>

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:padding="10dp">

                <ImageView
                    style="@style/RegisterImageView"
                    android:src="@drawable/icon_tag"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:orientation="vertical"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp">

                    <TextView
                        android:id="@+id/expense_2_q"
                        style="@style/CustomTextView"
                        android:text="@string/expense_2_q"/>

                    <RadioGroup
                        android:id="@+id/register_radio_earn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp">

                        <RadioButton
                            style="@style/CustomRadioBox"
                            android:text="@string/category_earn_1"/>

                        <RadioButton
                            style="@style/CustomRadioBox"
                            android:text="@string/category_earn_2"/>

                        <RadioButton
                            style="@style/CustomRadioBox"
                            android:text="@string/category_earn_3"/>

                        <RadioButton
                            style="@style/CustomRadioBox"
                            android:text="@string/category_earn_4"/>

                    </RadioGroup>

                    <RadioGroup
                        android:id="@+id/register_radio_expense_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp">

                        <RadioButton
                            style="@style/CustomRadioBox"
                            android:text="@string/category_expense_1"/>

                        <RadioButton
                            style="@style/CustomRadioBox"
                            android:text="@string/category_expense_2"/>

                        <RadioButton
                            style="@style/CustomRadioBox"
                            android:text="@string/category_expense_3"/>

                        <RadioButton
                            style="@style/CustomRadioBox"
                            android:text="@string/category_expense_4"/>

                    </RadioGroup>

                    <RadioGroup
                        android:id="@+id/register_radio_expense_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp">

                        <RadioButton
                            style="@style/CustomRadioBox"
                            android:text="@string/category_expense_5"/>

                        <RadioButton
                            style="@style/CustomRadioBox"
                            android:text="@string/category_expense_6"/>

                        <RadioButton
                            style="@style/CustomRadioBox"
                            android:text="@string/category_expense_7"/>

                    </RadioGroup>

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp">

                <ImageView
                    style="@style/RegisterImageView"
                    android:src="@drawable/icon_won"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:orientation="vertical"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp">

                    <TextView
                        android:id="@+id/register_expense_3_q"
                        style="@style/CustomTextView"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/register_expense_expense"
                            style="@style/CustomEditText"
                            android:layout_width="0dp"
                            android:layout_weight="8"
                            android:maxLength="10"
                            android:inputType="number"
                            android:hint="@string/fixed_budget_2_a"/>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:textColor="@android:color/black"
                            android:text="@string/won"/>

                    </LinearLayout>



                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:padding="10dp">

                <ImageView
                    style="@style/RegisterImageView"
                    android:src="@drawable/icon_clock"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:orientation="vertical"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp">

                    <TextView
                        android:id="@+id/register_expense_4_q"
                        style="@style/CustomTextView" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/register_expense_date"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_gravity="start"
                            android:paddingTop="5dp"
                            android:paddingBottom="5dp"
                            android:textSize="16sp"
                            android:textColor="@android:color/black"/>

                        <TextView
                            android:id="@+id/register_expense_time"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:paddingTop="5dp"
                            android:paddingBottom="5dp"
                            android:textSize="16sp"
                            android:textColor="@android:color/black"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"/>

            <Button
                android:id="@+id/register_expense_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="30dp"
                android:background="@color/button"
                android:text="@string/okButton"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>