<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/tab_toolbar"
            style="@style/CustomToolbar"
            app:layout_scrollFlags="scroll|enterAlways" />

        <android.support.design.widget.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/toolbar"
            app:tabGravity="center"
            app:layout_scrollFlags="scroll|enterAlways" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/tab_swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tab_appBarLayout"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v4.view.ViewPager
            android:id="@+id/tab_viewpager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </android.support.v4.widget.SwipeRefreshLayout>

    <LinearLayout
        android:id="@+id/tab_fade_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/fade"
        android:orientation="horizontal"
        android:clickable="true"
        android:visibility="gone"/>

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/tab_button_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        fab:fab_addButtonColorNormal="#E4575F"
        fab:fab_addButtonColorPressed="#BD4B5B"
        fab:fab_labelStyle="@style/menu_labels_style"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/tab_button_fixed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_icon="@drawable/icon_credit_card"
            fab:fab_colorNormal="@color/white"
            fab:fab_title="@string/button_fixed_budget"
            fab:fab_colorPressed="@color/white_pressed" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/tab_button_target"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/white"
            fab:fab_title="@string/button_target_budget"
            fab:fab_icon="@drawable/icon_goal"
            fab:fab_colorPressed="@color/white_pressed" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/tab_button_expense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_icon="@drawable/icon_minus"
            fab:fab_colorNormal="@color/white"
            fab:fab_title="@string/button_expense"
            fab:fab_colorPressed="@color/white_pressed"
            android:visibility="gone"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/tab_button_earn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/white"
            fab:fab_icon="@drawable/icon_coin_stack"
            fab:fab_title="@string/button_earn"
            fab:fab_colorPressed="@color/white_pressed"
            android:visibility="gone"/>

    </com.getbase.floatingactionbutton.FloatingActionsMenu>


</android.support.design.widget.CoordinatorLayout>