<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_background"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="30dp">

        <TextView
            android:id="@+id/fragment_survey_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:padding="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/survey_1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:orientation="vertical"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp">

            <EditText
                android:id="@+id/fragment_survey_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:hint="@string/survey_answer_1"/>

            <LinearLayout
                android:id="@+id/fragment_survey_sex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/fragment_survey_man"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="5dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginEnd="10dp"
                        android:gravity="end"
                        android:textSize="16sp"
                        android:textColor="@color/gray"
                        android:text="@string/man"
                        android:clickable="true"/>

                    <TextView
                        android:id="@+id/fragment_survey_woman"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="5dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:gravity="start"
                        android:textSize="16sp"
                        android:textColor="@color/gray"
                        android:text="@string/woman"
                        android:clickable="true"/>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/white"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="30dp"/>

            </LinearLayout>

            <EditText
                android:id="@+id/fragment_survey_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:inputType="number"
                android:hint="@string/survey_answer_2"/>

            <EditText
                android:id="@+id/fragment_survey_available_budget"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:inputType="number"
                android:hint="@string/survey_answer_3"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@android:color/transparent">

            <ImageButton
                android:id="@+id/activity_survey_before"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="center"
                android:minWidth="80dp"
                android:padding="16dp"
                android:src="@drawable/ic_navigate_before_white_24dp"
                android:background="@android:color/transparent"/>

            <com.blackrubystudio.aipel3.util.CircleAnimIndicator
                android:id="@+id/activity_survey_circle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="0dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="0dp"
                android:textColor="@android:color/white"
                android:textSize="6sp"/>

            <ImageButton
                android:id="@+id/activity_survey_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:minWidth="80dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_navigate_next_white_24dp"
                android:background="@android:color/transparent" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>